# Single-Particle-pipeline

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  env.lock.yml  pyproject.toml  run_happy_path.sh
golden-path/: README.md  analyze.cpptraj  build.leap  equil.in  heat.in  min.in  prod.in  run.sh
golden-path/tests/: test_gates.sh
scripts/: env.sh  make_skillbase_deliverable.sh  notify_discord.sh  recover_hook.sh  watch_ratelimits.sh
skills/amber-md-run/: SKILL.md  test_acceptance.sh
skills/amber-md-run/references/: heuristics.md
skills/amber-md-run/scripts/: wrapper.py
skills/amber-recover/: SKILL.md  test_acceptance.sh
skills/amber-recover/references/: recovery-loop.md
skills/amber-recover/scripts/: check_amber_vendored.py  wrapper.py
skills/amber-recover/tests/: test_detector.py  test_wiring.sh
skills/antechamber-ligandprep/: SKILL.md  test_acceptance.sh
skills/antechamber-ligandprep/references/: heuristics.md
skills/antechamber-ligandprep/scripts/: wrapper.py
skills/antechamber-ligandprep/tests/: test_engine.py
skills/cpptraj-analysis/: SKILL.md  test_acceptance.sh
skills/cpptraj-analysis/references/: heuristics.md
skills/md-planner/: SKILL.md  test_acceptance.sh
skills/mdin-edit/: SKILL.md  test_acceptance.sh
skills/pipeline-async/: SKILL.md  test_acceptance.sh
skills/plip-profile/: SKILL.md  test_acceptance.sh
skills/tleap-build/: SKILL.md  test_acceptance.sh
smoke-test/: README.md  run.sh
smoke-test/aladip/: analyze.cpptraj  build.leap  heat.in  min.in  prod.in
smoke-test/benzene/: README.md  load.leap
(+41 files in other folders)
